--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+@import '@fontsource/nunito-sans';
 
 .main {
     font-family: "Nunito Sans", sans-serif;
 }
-/* Background Selectors */
 
  /* For SVG background */
 
@@ -27,7 +26,6 @@
 }
 
 /* For Sticky Navbar */
-
 .sticky-navbar {
     position: sticky;
     top: 0;
